Terraform practice/day-9/securitygrps.tf
#security group for alb
resource "aws_security_group" "SG" {
  name       = "alb-sg"
  vpc_id     = aws_vpc.cust.id
  depends_on = [aws_vpc.cust]


  ingress {
    description = "http"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "https"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
